@@ -1,3 +1,2 @@
-DIST django-filter-0.10.0.tar.gz 197308 SHA256 988ab387605eef1a561d3325462a611fcac9bdb2d084b5c43f05eadadea0030d SHA512 5682bea76436db69abff30c9541545cf9ed86c29120e61dfcc94b47b63973784de316fa7e6c8e82d0ba7b1dc55fef0b4ca31298e7765e6276b520d67b394d19f WHIRLPOOL 47e3b230e96d32f81df3b18031779c0120f31d75e63ef2d35ec85a8732da0fa1397baa0cd215dbdb59480d185383c7c909c2c53c809edb68bb6c76ae16d40bff
 DIST django-filter-0.11.0.tar.gz 203673 SHA256 7d17547b65216cc5c6fbc04aee55088ccd5917c0775304d96f7017c26c789cd7 SHA512 fcdb36c94e9f88a1c2d32ecbe1107b5306d0fffe65baa874c5d43dbe6ba84e947c6f8c002e5e64a750f5f3ab0753420bca5ab6c7246871626001882542042aa9 WHIRLPOOL 6f262342b76ede60bd8225f20297bb2407f47e7066243b9a29b5f9b2119d860e8a6f857adb42f2060b39a6ec97253a57ddd7c79aa2ae04142347f499b1b62738
-DIST django-filter-0.9.2.tar.gz 39974 SHA256 ce25ba0cd01cce90f339d5f2979a283392821fdd2e7725aa207777daf6ff828b SHA512 068e2c2b307682eeb1edc0a9f396288de91538a08c21bfbdab5240db8e06254935c4047250b7b0c98650f4b8f7d35db9be10bf2e58dd72fa195ceb8cf302253c WHIRLPOOL 6d2ec5ac151a48bd1ab9c2109f8f86ca5e61e792281512ed5ed714326ccf145e702a4f34c3ddc8f4f7ed837e78e440d1d54c75104f073b9f92b9d75386138ee9
+DIST django-filter-0.12.0.tar.gz 48395 SHA256 a1b03aa17e840af598ffbe872111011eb03b936ce34b0b9de85b4e493a55cd92 SHA512 0cc5787347443431b6c78fa9bd23beecb181a5cccd835613f35a64e31b03af17ec012148d62834bbab774980af8712a2ad9e7097a627bb6deb771dd8fc880c45 WHIRLPOOL 68542f12692af283bb973faa557221cc7138af8b42a967cc0557e87f9bdd4aed636b70fa5c52ed51673a2c832b9e4f693c309cacb5c29c3fb318c8e0b0d0d499
