@@ -1,0 +1,22 @@
+# Copyright 1999-2016 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Id$
+
+EAPI=5
+
+PYTHON_COMPAT=( python2_7 python3_{3,4} )
+
+inherit distutils-r1
+
+DESCRIPTION="A generic system for filtering Django QuerySets based on user selections"
+HOMEPAGE="https://github.com/alex/django-filter https://django-filter.readthedocs.org"
+SRC_URI="https://github.com/alex/${PN}/archive/${PV}.tar.gz -> ${P}.tar.gz"
+
+LICENSE="BSD"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+CDEPEND=">=dev-python/django-1.8[${PYTHON_USEDEP}]"
+RDEPEND="${CDEPEND}"
+DEPEND=""
