@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/django-filter
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
+
+*django-filter-0.12.0 (09 Jan 2016)
+
+  09 Jan 2016; Johann Schmitz <ercpe@gentoo.org> +django-filter-0.12.0.ebuild,
+  -django-filter-0.10.0.ebuild, -django-filter-0.9.2.ebuild:
+  dev-python/django-filter: Version bump
 
   16 Aug 2015; Johann Schmitz <ercpe@gentoo.org> django-filter-0.10.0.ebuild,
   django-filter-0.11.0.ebuild, django-filter-0.9.2.ebuild:
